<resources>
    <string name="app_name">Test App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ecommerce_concept">
        Ecommerce\n
        Concept
    </string>
    <string name="location_pin">Zihuatanejo, Gro</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="price">$300</string>
</resources>