<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background">

        <ImageView
            android:id="@+id/iv_location_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_location"
            app:layout_constraintEnd_toStartOf="@id/tv_location"
            app:layout_constraintBottom_toBottomOf="@id/tv_location"
            android:src="@drawable/ic_location_pin"
            android:layout_marginEnd="11dp"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/location_pin"
            android:fontFamily="@font/mark_pro_medium"
            android:textSize="15sp"
            android:textColor="@color/color_secondary"/>

        <ImageView
            android:id="@+id/iv_expand_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_location"
            app:layout_constraintStart_toEndOf="@id/tv_location"
            app:layout_constraintBottom_toBottomOf="@id/tv_location"
            android:src="@drawable/ic_expand_more"
            android:layout_marginStart="8dp"/>

        <ImageView
            android:id="@+id/iv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_expand_more"
            app:layout_constraintBottom_toBottomOf="@id/iv_expand_more"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_filter"
            android:layout_marginEnd="35dp"/>

        <TextView
            android:id="@+id/tv_select_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/select_category"
            android:textColor="@color/color_secondary"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location"/>

        <TextView
            android:id="@+id/tv_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/mark_pro_regular"
            android:text="@string/view_all"
            android:textColor="@color/color_primary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_select_category"
            app:layout_constraintBottom_toBottomOf="@id/tv_select_category"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/category_item_enabled"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_select_category"
            android:layout_marginStart="27dp"
            android:layout_marginTop="24dp"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/search"
            android:textSize="12sp"
            android:textColor="@color/color_secondary_wh"
            android:fontFamily="@font/mark_pro_regular"
            app:layout_constraintTop_toBottomOf="@id/rv_category"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="18dp"
            android:paddingStart="24dp"/>

        <ImageView
            android:id="@+id/iv_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_ellipse"
            app:layout_constraintTop_toTopOf="@+id/et_search"
            app:layout_constraintStart_toEndOf="@id/et_search"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:src="@drawable/ic_qr_code"/>

        <TextView
            android:id="@+id/tv_hot_sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_search"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="17dp"
            android:text="@string/hot_sales"
            android:fontFamily="@font/mark_pro_bold"
            android:textSize="25sp"
            android:textColor="@color/color_secondary"/>

        <TextView
            android:id="@+id/tv_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/mark_pro_regular"
            android:text="@string/see_more"
            android:textColor="@color/color_primary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_hot_sales"
            app:layout_constraintBottom_toBottomOf="@id/tv_hot_sales"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hot_sales"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            app:layout_constraintTop_toBottomOf="@id/tv_hot_sales"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            android:orientation="horizontal"
            tools:listitem="@layout/hot_sales_item"/>

        <TextView
            android:id="@+id/tv_best_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_hot_sales"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="11dp"
            android:layout_marginStart="17sp"
            android:text="Best Seller"
            android:textSize="25sp"
            android:fontFamily="@font/mark_pro_bold"
            android:textColor="@color/color_secondary"/>

        <TextView
            android:id="@+id/tv_see_more_bs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/mark_pro_regular"
            android:text="@string/see_more"
            android:textColor="@color/color_primary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_best_seller"
            app:layout_constraintBottom_toBottomOf="@id/tv_best_seller"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_best_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_best_seller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/best_seller_item"
            app:spanCount="2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
